--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ header span {
 	margin-top: 1em;
 }
 
+header p {
+	/*background-color: rgba(255,217,67, 0.5);*/
+	text-shadow: 1px 1px 1px #000;
+	/*box-shadow: 0px 0px 5px 5px rgba(255,217,67, 0.5);*/
+}
+
 .navigation {
 	margin-top: 2em;
 	list-style: none;
